# rag-system-api

./: .gitattributes  pyproject.toml
project/: creating_vector_base.ipynb  main.py  test_inference.py  texts_base.pkl  vector_base.idx
